test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_unsigned_type_expr.draco
unsigned 255-1 a;

proc main() void : a := 0; corp;
