test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_esac_as_identifier.draco
int esac;
 
proc main() void : a := 1; corp;
